samples/_failures_safe/1761192116_ac7097_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a5306949.c: In function ‘main’:
./samples/SAFE/__tmp_a5306949.c:136:13: error: expected expression at end of input
  136 |             if (scanf("%d %d", &rows2, &cols2) != 2 || rows2 <= 0 || cols2 <= 0 || rows2 >
      |             ^~
./samples/SAFE/__tmp_a5306949.c:136:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a5306949.c:136:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a5306949.c:136:13: error: expected declaration or statement at end of input
